# Translate_work

./: README.md  Другий_етап_курсової_роботи.docx  Звіт за 4 і 5 тижні.odt  Звіт_за_два_тижні.docx  Тема_курсової.docx  Третій тижневий звіт.odt
src/robot/: listen.launch  package.xml
src/robot/scripts/: main.py  recognizer.py  speak.py
src/robot/vocab/: voice_cmd.dic  voice_cmd.kwlist  voice_cmd.lm
src/sound_play/scripts/: soundplay_node.py
